# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: my-check.yml  python-package.yml
gendiff/: __init__.py  arg_argparse.py  build_difference.py  cli.py  consts.py  generate.py  generator.py  parser.py  sorter_data.py
gendiff/formatters/: __init__.py  define_format.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py  test_generator_diff.py
tests/fixtures/: expected.txt  file2_yaml.yaml
